<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2013-2015 The CyanogenMod Project
     Copyright (C) 2017-2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Setup Wizard</string>
    <string name="os_name" translatable="false">LineageOS</string>

    <string name="lineage_wizard_script_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script</string>
    <string name="lineage_wizard_script_user_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script_user</string>

    <string name="activity_label_empty" />

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="loading">Just a sec\u2026</string>

    <string name="setup_complete">Setup is complete</string>
    <string name="setup_welcome">Welcome</string>
    <string name="setup_locale">Language</string>
    <string name="setup_wifi">Select Wi-Fi</string>
    <string name="setup_sim_missing">SIM card missing</string>
    <string name="setup_choose_data_sim">Choose a SIM for data</string>
    <string name="setup_location">Location services</string>
    <string name="setup_other">Other services</string>
    <string name="setup_datetime">Date &amp; time</string>
    <string name="setup_current_date">Current date</string>
    <string name="setup_current_time">Current time</string>

    <string name="sim_missing_summary" product="tablet">A SIM card has not been detected in your tablet. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="sim_missing_summary" product="default">A SIM card has not been detected in your phone. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="choose_data_sim_summary" product="tablet">Which SIM do you want to use for data? The selected SIM may incur network charges as it will be used to set up your tablet.</string>
    <string name="choose_data_sim_summary" product="default">Which SIM do you want to use for data? The selected SIM may incur network charges as it will be used to set up your phone.</string>

    <string name="date_time_summary">Set your time zone and adjust current date and time if needed</string>

    <string name="backup_data_summary"><b>Back up</b> app data, Wi-Fi passwords, and other settings to Google servers</string>

    <string name="other_services_summary">These services put Google to work for you, and you can turn them on or off at any time. Data will be used in accordance with Google\'s <xliff:g example="Privacy Policy" id="name">%s</xliff:g>.</string>
    <string name="location_services_summary">Location services allows system and third party apps to gather and use data such as your approximate location. For example, an app may use your approximate location to locate nearby coffee shops.</string>
    <string name="location_access_summary"><b>Allow apps that have asked your permission</b> to use your location information. This may include your current location and past locations.</string>

    <string name="setup_mobile_data">Turn on cellular data</string>
    <string name="setup_mobile_data_no_service">No service</string>
    <string name="setup_mobile_data_emergency_only">Emergency calls only</string>
    <string name="enable_mobile_data_summary">Do you want to use cellular data during setup? Turning on cellular data may be subject to data charges.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>

    <string name="emergency_call">Emergency call</string>
    <string name="accessibility_settings">Accessibility settings</string>

    <string name="setup_services">LineageOS features</string>
    <string name="services_explanation" product="tablet">These services work for you to extend the capabilities of your tablet. Data will be used in accordance with LineageOS\'s <xliff:g example="Privacy Policy" id="name">%s</xliff:g>.</string>
    <string name="services_explanation" product="default">These services work for you to extend the capabilities of your phone. Data will be used in accordance with LineageOS\'s <xliff:g example="Privacy Policy" id="name">%s</xliff:g>.</string>
    <string name="services_privacy_policy">Privacy Policy</string>
    <string name="services_help_improve_cm">Help improve <xliff:g example="LineageOS" id="name">%s</xliff:g></string>
    <string name="services_metrics_label"><xliff:g example="Help improve LineageOS" id="name">%1$s</xliff:g> by automatically sending diagnostic and usage data to LineageOS. This information can’t be used to identify you and lends a hand to teams working on things like battery life, app performance, and new <xliff:g example="LineageOS" id="name">%2$s</xliff:g> features.</string>
    <string name="services_os_nav_keys_label"><b>Use on screen navigation keys</b> instead of hardware keys.</string>

    <string name="setup_unlock">Unlock</string>
    <string name="setup_device_locked">This device has been locked by the user.</string>
    <string name="setup_require_cyanogen_label"><b>Require your account password</b> in order to use your device even after a factory reset.</string>
    <string name="setup_device_locked_instructions"><i>To turn this feature off/on, please go to Settings > Security</i></string>

    <!-- Biometric setup -->
    <string name="settings_biometric_setup_title">Select backup screen lock type</string>
    <string name="settings_biometric_setup_details">How would you like to lock your screen?</string>
    <string name="fingerprint_setup_title">Fingerprint setup</string>
    <string name="fingerprint_setup_summary">To use your fingerprint sensor to unlock your screen, you\'ll need to:</string>
    <string name="fingerprint_setup_add_fingerprint">Add your fingerprint</string>
    <string name="face_setup_title">Face setup</string>
    <string name="face_setup_summary">To use your face to unlock your screen, you\'ll need to:</string>
    <string name="face_setup_add_face">Add your face</string>
    <string name="biometric_setup_backup_lock_method">Setup a secondary unlock method</string>
    <string name="biometric_setup_screen_lock_setup">Setup screen lock</string>
    <string name="sim_locale_changed">%1$s SIM detected</string>

    <!-- secure lock screen -->
    <string name="settings_lockscreen_setup_title">Select screen lock type</string>
    <string name="settings_lockscreen_setup_details">How would you like to lock your screen?</string>
    <string name="lockscreen_setup_title" product="tablet">Protect your tablet</string>
    <string name="lockscreen_setup_title" product="default">Protect your phone</string>
    <string name="lockscreen_setup_summary"><b>Protect this device</b> and require a PIN, pattern, or password to unlock the screen</string>
    <string name="lockscreen_setup_screen_lock_setup">Set up</string>

    <!-- Backup Restore -->
    <string name="intro_restore_title">Restore apps and data</string>
    <string name="intro_restore_subtitle" product="tablet">If you have a backup from your last LineageOS tablet, you can restore it here.</string>
    <string name="intro_restore_subtitle" product="default">If you have a backup from your last LineageOS phone, you can restore it here.</string>
    <string name="intro_restore_button">Restore from backup</string>

    <!-- Update Recovery -->
    <string name="update_recovery_title">Update Lineage Recovery</string>
    <string name="update_recovery_description">Updates Lineage Recovery on first boot subsequent to every update.</string>
    <string name="update_recovery_warning">Recovery will be updated as soon as you finish the setup. If you wish to keep it intact, disable this feature.</string>
    <string name="update_recovery_setting">Update Lineage Recovery alongside the OS</string>


    <!-- Styx -->
    <string name="location_desc">Location service allows system and third party apps to gather and use data such as your appropriate location</string>
    <string name="styx_setup_complete_title">You\'re all set!</string>
    <string name="styx_setup_complete_message">Welcome to Styx Project!</string>
</resources>
