<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        style="@style/PageHeaderIcon"
        android:src="@drawable/ic_fingerprint" />

    <TextView
        style="@style/PageTitle"
        android:text="@string/setup_datetime" />

    <TextView
        android:id="@+id/setup_biometric_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:textAppearance="@style/StyxTitle"
        android:textColor="#AB000000"
        tools:text="@string/face_setup_summary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_check_mark"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/content_margin_left"
        android:paddingRight="@dimen/location_text_margin_right"
        android:text="@string/biometric_setup_backup_lock_method"
        android:textAppearance="@style/StyxSubTitle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/setup_add_biometric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_check_mark"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/content_margin_left"
        android:paddingRight="@dimen/location_text_margin_right"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/fingerprint_setup_add_fingerprint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_rect"
        android:paddingStart="32dp"
        android:paddingTop="12dp"
        android:paddingEnd="32dp"
        android:paddingBottom="10dp"
        android:text="@string/biometric_setup_screen_lock_setup"
        android:textAppearance="@style/StyxSubTitle" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="NewApi" />

    <TextView
        android:id="@+id/skip"
        style="@style/StyxNext"
        android:layout_gravity="end"
        android:text="@string/skip" />
</LinearLayout>