<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        style="@style/PageHeaderIcon"
        android:src="@drawable/ic_location" />

    <TextView
        style="@style/PageTitle"
        android:text="@string/setup_location" />

    <TextView
        android:id="@+id/desc"
        style="@style/StyxTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/location_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/location_checkbox"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="#000000"
            android:checked="true"
            android:clickable="false" />

        <TextView
            android:id="@+id/location_summary"
            style="@style/StyxSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/location_access_summary" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="NewApi" />

    <TextView
        android:id="@+id/next"
        style="@style/StyxNext"
        android:layout_gravity="end"
        android:text="@string/next" />
</LinearLayout>