<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        style="@style/PageHeaderIcon"
        android:background="@drawable/circle_outline"
        android:padding="8dp"
        android:src="@drawable/tick" />

    <TextView
        style="@style/PageTitle"
        android:text="@string/styx_setup_complete_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/styx_setup_complete_message"
        android:textAppearance="@style/StyxTitle"
        android:textColor="#91000000" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="NewApi" />

    <TextView
        android:id="@+id/finish_setup"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/rounded_rect"
        android:gravity="center"
        android:text="@string/start"
        android:textAppearance="@style/StyxTitle" />
</LinearLayout>